--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     class : 'lottery-thank-you',
                     title : '谢谢参与' ,
                     text : '',
-                    describe : '感谢你的支持'
+                    describe : ''
                 },
                 //加息卷1% 2小时
                 {
